# mrimrf

./: .gitignore  CMakeLists.txt  README
core/: CMakeLists.txt  __init__.py  mrimrf.cc  mrimrf.h  partialreplica.cc  partialreplica.h  pt.py  pymrimrf.cc  sw.cc  sw.h  test.cc  test_pymrimrf.py  types.h  util.cc  util.h
experiments/: data.py  data_test.py  generate_data_figs.py  log_likelihood.py  pt_complex_2d_synth.py  pt_data.py  test.py  test2.py  test3.py
presentation/: Makefile  mrimrf.bib  phase_wrap.py  presentation.tex
presentation/notmine/: MacKay_31.2.eps
pywrap/: CMakeLists.txt  pywrap.cc  pywrap.h  pywrap_test.cc  pywrap_test.h  pywrap_test.py
synth/: synth.py  util.py
tests/: CMakeLists.txt  partialreplica.py  pt.py  runner.cc  test_sw.cc
writeup/: status1.tex  status2.tex
